--- a/assets/styles/sponsors.css
+++ b/assets/styles/sponsors.css
@@ -2,9 +2,8 @@
     position: relative;
     display: flex;
     flex-flow: column;
-    margin-top: 250px;
+    margin-top: max(120px, 10vw);
     text-align: center;
-    padding: 0 15px;
 }
 
 .SponsorsHeader {
